Added styling to webpage using inheritance and cascading

--- a/shelter.html
+++ b/shelter.html
@@ -10,19 +10,19 @@
 
     <div class="column">
       <h2>Koala</h2>
-      <img src>
+      <img src="img/koala.jpg" alt="Photo of Koala">
       <p>This koala's name is Sam. He is old</p>
     </div>
 
     <div class="column">
       <h2>Honey Badger</h2>
-      <img src>
+      <img src="img/honeybadger.jpg" alt="Photo of Honey Badger">
       <p>The honey badger does not give any cares. You can ask him and he'll tell you so.</p>
     </div>
 
     <div class="column">
       <h2>Sharknado</h2>
-      <img src>
+      <img src="img/sharknado.jpg" alt="Photo of Sharknado">
       <p>It's like watching a bad movie.</p>
     </div>
 
