Add media queries for background changes based on size of screen

--- a/shelter.html
+++ b/shelter.html
@@ -22,7 +22,7 @@
 
     <div class="column">
       <h2>Sharknado</h2>
-      <img src="img/sharknado.jpg" alt="Photo of Sharknado">
+      <img src="img/sharknado.jpg" alt="Photo of sharknado">
       <p>It's like watching a bad movie.</p>
     </div>
 
